--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -12,6 +12,8 @@
   </head>
 
   <body>
-    {% block content %}{% endblock %}
+    <div id="content">
+      {% block content %}{% endblock %}
+    </div>
   </body>
 </html>
